add get_fields() + update get_lovs()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(create_dataset)
 export(create_resource)
 export(get_credentials)
 export(get_datasets_list)
+export(get_fields)
 export(get_lovs)
 export(get_metadata)
 export(get_user_details)
+export(update_dataset)
