--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,9 @@ Imports: httr,
     dplyr,
     stringr,
     ckanr,
-    reshape2
+    reshape2,
+    jsonlite,
+    plyr,
+    purrr,
+    tidyr
 RoxygenNote: 6.0.1
