--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,6 @@ export(get_lovs)
 export(get_metadata)
 export(get_resource_nid)
 export(get_user_details)
+export(search_catalog)
 export(update_dataset)
+export(update_resource)
