--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_lovs)
 export(get_metadata)
 export(get_resource_nid)
 export(get_user_details)
+export(logout_ddh)
 export(search_catalog)
 export(update_dataset)
 export(update_resource)
