--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(attach_file_to_resource)
 export(create_dataset)
 export(create_json_body)
 export(create_resource)
+export(download_resource)
 export(get_credentials)
 export(get_datasets_list)
 export(get_fields)
