export authentication functions from dkanr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(attach_file_to_resource)
 export(create_dataset)
 export(create_json_body)
 export(create_resource)
+export(dkanr_logout)
+export(dkanr_settings)
+export(dkanr_setup)
 export(download_resource)
 export(get_datasets_list)
 export(get_fields)
@@ -17,3 +20,6 @@ export(search_catalog)
 export(update_dataset)
 export(update_resource)
 import(dplyr)
+importFrom(dkanr,dkanr_logout)
+importFrom(dkanr,dkanr_settings)
+importFrom(dkanr,dkanr_setup)
