standardize root_url and credentials parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(dkanr_logout)
 export(dkanr_settings)
 export(dkanr_setup)
 export(download_resource)
+export(get_datasets_count)
 export(get_datasets_list)
 export(get_fields)
 export(get_lovs)
