get required fields and lov fields

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,10 @@ export(download_resource)
 export(get_datasets_count)
 export(get_datasets_list)
 export(get_fields)
+export(get_lov_fields)
 export(get_lovs)
 export(get_metadata)
+export(get_required_fields)
 export(get_resource_nid)
 export(get_user_details)
 export(logout_ddh)
