--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Imports: httr,
     utils,
     curl
 Suggests: knitr,
-    covr
+    covr,
+    httptest
 RoxygenNote: 6.0.1
 Depends: R (>= 2.10)
