imported get_resource_nids() from dkanr, and deleted get_resource_nid() from ddh

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,3 +28,4 @@ import(dplyr)
 importFrom(dkanr,dkanr_logout)
 importFrom(dkanr,dkanr_settings)
 importFrom(dkanr,dkanr_setup)
+importFrom(dkanr,get_resource_nids)
