ran devtools::document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_lov_fields)
 export(get_lovs)
 export(get_metadata)
 export(get_required_fields)
+export(get_resource_nids)
 export(get_user_details)
 export(logout_ddh)
 export(map_tids)
