finsihed unit testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(search_catalog)
 export(update_dataset)
 export(update_resource)
 import(dplyr)
+import(readxl)
 importFrom(dkanr,dkanr_logout)
 importFrom(dkanr,dkanr_settings)
 importFrom(dkanr,dkanr_setup)
