--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(get_required_fields)
 export(get_resource_nids)
 export(get_user_details)
 export(logout_ddh)
+export(map_metadata_excel)
 export(map_tids)
 export(search_catalog)
 export(update_dataset)
