add func to unpublish

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(logout_ddh)
 export(map_metadata_excel)
 export(map_tids)
 export(search_catalog)
+export(unpublish_dataset)
 export(update_dataset)
 export(update_resource)
 import(dplyr)
