--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(attach_resources_to_dataset)
 export(create_dataset)
 export(create_json_attach)
 export(create_json_body)
+export(create_json_dataset)
+export(create_json_resource)
 export(create_resource)
 export(dkanr_logout)
 export(dkanr_settings)
