fix #83 Add delete_dataset() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(create_dataset)
 export(create_json_dataset)
 export(create_json_resource)
 export(create_resource)
+export(delete_dataset)
 export(dkanr_logout)
 export(dkanr_settings)
 export(dkanr_setup)
