--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
-Imports: httr,
+Imports: 
+    httr,
     plyr,
     dplyr,
     stringr,
@@ -26,7 +27,8 @@ Imports: httr,
     utils,
     curl,
     readxl,
-    stats
+    stats,
+    memoise
 Suggests: knitr,
     covr,
     httptest
